# mandala-ops-codex

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: weekly_ops.yml
data/: collections_plan.csv  commercial_sample_products.csv  first_batch_commercial_products.csv  keywords.csv  platform_rules.csv  sample_products.csv
output/: active_exposure_calendar.csv  ai_image_generation_jobs.csv  ai_video_generation_jobs.csv  auto_edit_plan.csv  commercial_seo_audit.csv  content_plan.csv  creative_asset_review_tracker.csv  creator_dm_templates.csv  creator_dm_templates.md  creator_outreach_tracker.csv  first_batch_commercial_seo_audit.csv  matrixify_commercial_update_template.csv  pinterest_pin_plan.csv  seo_audit.csv  short_video_script_plan.csv
output/creative_studio/: violet-beaded-bracelet_asset_review_tracker.csv  violet-beaded-bracelet_capcut_hyperframes_edit_plan.csv  violet-beaded-bracelet_creative_brief.md  violet-beaded-bracelet_gpt_image_jobs.csv  violet-beaded-bracelet_kling_video_jobs.csv
prompts/: codex_task_01_product_seo_pipeline.md  codex_task_02_shopify_api_integration.md  codex_task_03_content_calendar.md  codex_task_04_active_exposure_engine.md  codex_task_05_ai_creative_production_workflow.md  codex_task_06_local_workbench.md  codex_task_07_mandala_creative_studio.md  codex_task_08_hyperframes_auto_editing.md
src/mandala_ops/: cli.py  config.py  content_plan.py  (+9 more)
tests/: test_creative_brief.py  test_creative_studio.py  test_exposure_and_creator.py  test_hyperframes_editor.py  test_seo_rules.py  test_workbench.py
