[project]
name = "mandala-ops-codex-starter"
version = "0.1.0"
description = "Codex-ready ecommerce operations automation starter for Mandala Jewels."
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
